refactor(core, test): replace `List.get(index)` with `getFirst()` for improved readability and usage consistency